# rust-url-shortener

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs  short_url.rs
